# vertex_enumeration

./: .gitignore  CMakeLists.txt  LICENSE  README.MD  README.md
include/: vertex_enum.h
include/libqhull_r/: geom_r.h  io_r.h  libqhull_r.h  merge_r.h  poly_r.h  qhull_ra.h  random_r.h
include/libqhullcpp/: Coordinates.h  PointCoordinates.h  Qhull.h  QhullError.h  QhullFacet.h  QhullFacetList.h  QhullFacetSet.h  QhullHyperplane.h  QhullIterator.h  QhullLinkedList.h  QhullPoint.h  QhullPointSet.h  QhullPoints.h  QhullQh.h  QhullRidge.h  QhullSet.h  QhullSets.h  QhullStat.h  QhullUser.h  QhullVertex.h  QhullVertexSet.h  RboxPoints.h  RoadError.h
lib/libqhull_r/: geom2_r.c  global_r.c  mem_r.c  merge_r.c  poly2_r.c  poly_r.c  qset_r.c  random_r.c  rboxlib_r.c  stat_r.c  user_r.c  usermem_r.c  userprintf_r.c  userprintf_rbox_r.c
lib/libqhullcpp/: Coordinates.cpp  PointCoordinates.cpp  Qhull.cpp  QhullFacet.cpp  QhullFacetList.cpp  QhullFacetSet.cpp  QhullHyperplane.cpp  QhullPoint.cpp  QhullPointSet.cpp  QhullPoints.cpp  QhullQh.cpp  QhullRidge.cpp  QhullSet.cpp  QhullStat.cpp  QhullUser.cpp  QhullVertex.cpp  QhullVertexSet.cpp  RboxPoints.cpp  RoadError.cpp  RoadLogEvent.cpp
scripts/: vertices.txt  visualize.py
src/: main.cpp
